# try-rust-esp32c3-network

./: .gitignore  Cargo.toml
.cargo/: config.toml
scripts/: flash.sh  monitor.sh
src/: http_request.rs  main.rs  secrets.rs  wifi.rs
